<resources>
    <string name="app_name">ParliamentProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_member">Next member</string>
    <string name="search">Search..</string>
    <string name="searchText">Search</string>
    <string name="members_found">0 members found</string>
    <string name="settings">Filter settings</string>
    <string name="showMen">Show men</string>
    <string name="showWomen">Show women</string>
    <string name="showAll">Show all</string>


    <!-- Parliament parties -->
    <string name="back">Back</string>
    <string name="kdp">KDP</string>
    <string name="kesk">Kesk</string>
    <string name="kok">Kok</string>
    <string name="liik">Liik</string>
    <string name="ps">PS</string>
    <string name="r">R</string>
    <string name="sd">SD</string>
    <string name="vas">Vas</string>
    <string name="vihr">Vihr</string>

    <!-- descriptions -->
    <string name="partyLogo">Party logo</string>

    <!-- SettingsFragment strings -->
    <string name="age_range">Age range</string>
    <string name="switchkdp">KDP  </string>
    <string name="switchkesk">Kesk  </string>
    <string name="switchkok">Kok  </string>
    <string name="switchliik">Liik  </string>
    <string name="switchps">PS  </string>
    <string name="switchr">R  </string>
    <string name="switchsd">SD  </string>
    <string name="switchvas">Vas  </string>
    <string name="switchvihr">Vihr  </string>
    <string name="on">SHOW</string>
    <string name="off">HIDE</string>
    <string name="placeholder_min_age">30</string>
    <string name="placeholder_max_age">80</string>
    <string name="save">Save</string>

    <!-- MemberReviewFragment strings -->
    <string name="title_placeholder">A Review</string>
    <string name="reviewTitle">Create a review</string>
    <string name="reviewHint">Write your comment here</string>

    <!-- MainFragment strings -->
    <string name="overview">Overview</string>
    <string name="db_updated">Database updated</string>
    <string name="last_viewed">Last viewed MP</string>
    <string name="current_settings">Current settings</string>
    <string name="placeholder_date">28.9.2021,\n 20:00 PM</string>

    <!-- MemberFragment strings -->
    <string name="age">Age</string>
    <string name="Seat_number">Seat</string>
    <string name="minister">Minister</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="title">A title</string>


</resources>